minor ts code improvements
some useEffect cleanups, code formatting / refactors