@@ -7,8 +7,11 @@ import org.springframework.stereotype.Component;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * Provides business logic used to populate a US Fed Business day calendar
+ * (basically weekdays, but not federal holidays)
+ */
 @Component
 public class USFederalReserveBusinessDaysHandler implements RuleHandler {
 
@@ -18,10 +21,11 @@ public class USFederalReserveBusinessDaysHandler implements RuleHandler {
     }
 
     @Override
-    public List<LocalDate> generateDates(ScheduleRule rule, LocalDate fromDate, LocalDate toDate) {
-        return fromDate.datesUntil(toDate.plusDays(1))
+    public List<LocalDate> generateDates(ScheduleRule rule, LocalDate from, LocalDate to) {
+        return from
+                .datesUntil(to.plusDays(1))
                 .filter(this::isBusinessDay)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -31,11 +35,14 @@ public class USFederalReserveBusinessDaysHandler implements RuleHandler {
 
     private boolean isBusinessDay(LocalDate date) {
         DayOfWeek day = date.getDayOfWeek();
+
+        // weekends are not business days
         if (day == DayOfWeek.SATURDAY || day == DayOfWeek.SUNDAY) {
             return false;
         }
 
+        // holidays are not business days
         List<LocalDate> holidays = USFederalHolidays.getHolidays(date.getYear());
-        return !holidays.contains(date);
+        return ! holidays.contains(date);
     }
 }
